--- a/examples/pages/switchTab/second/second.wxml
+++ b/examples/pages/switchTab/second/second.wxml
@@ -6,7 +6,7 @@
             <view class="TopSpan_Name">产品案例</view>
             <view class="TopSpan_Desc">使用VtuWeapp组件构建的优秀的成功案例</view>
         </view>
-        <block wx:for="{{companyInfo && companyInfo.minipgList}}">
+        <block wx:for="{{companyInfo && companyInfo.minipgList}}" wx:key="id">
             <template is="minipg_style" data="{{item: item, baseUrl: baseUrl}}"></template>
         </block>
     </view>
