--- a/examples/pages/comp/checkbox/checkbox.wxml
+++ b/examples/pages/comp/checkbox/checkbox.wxml
@@ -10,6 +10,26 @@
         <vtu-checkbox value="4" label="南京"></vtu-checkbox>
       </vtu-checkbox-group>
     </vtu-panel>
+
+    <vtu-panel v-class="panel">
+      <vtu-cell slot="header" title="横向" border></vtu-cell>
+      <vtu-checkbox-group model="{{value1}}" direction="horizontal" bind:change="change">
+        <vtu-checkbox value="1" label="《南极姑娘》"></vtu-checkbox>
+        <vtu-checkbox value="2" label="《格格不入》"></vtu-checkbox>
+        <vtu-checkbox value="3" label="《无梦之境》"></vtu-checkbox>
+      </vtu-checkbox-group>
+    </vtu-panel>
+
+    <vtu-panel v-class="panel">
+      <vtu-cell slot="header" title="横向（设定个数）" border></vtu-cell>
+      <vtu-checkbox-group model="{{value1}}" direction="horizontal" horizontalNumber="{{2}}" bind:change="change">
+        <vtu-checkbox value="1" label="《你和梦想必须一起活下去》" ></vtu-checkbox>
+        <vtu-checkbox value="2" label="《格格不入》"></vtu-checkbox>
+        <vtu-checkbox value="3" label="《比时间更短 比爱情更长》"></vtu-checkbox>
+        <vtu-checkbox value="4" label="《我与世界只差一个你》"></vtu-checkbox>
+      </vtu-checkbox-group>
+    </vtu-panel>
+
     <vtu-panel v-class="panel">
       <vtu-cell slot="header" title="自定义" border ></vtu-cell>
       <vtu-checkbox-group model="{{value1}}" align="right" active-color="red" checkbox-icon="iconfont icon-fangxingweixuanzhong" active-checkbox-icon="iconfont icon-fangxingxuanzhongfill" bind:change="change">
@@ -28,12 +48,10 @@
         <vtu-checkbox value="4" label="南京" icon="iconfont icon-shangchuan"></vtu-checkbox>
       </vtu-checkbox-group>
     </vtu-panel>
-
     <vtu-panel v-class="panel">
       <vtu-cell slot="header" title="弹出复选框" border></vtu-cell>
       <vtu-btn type="primary" bind:click="openCheckboxProp">弹出复选框</vtu-btn>
     </vtu-panel>
-
     <vtu-checkbox-prop show="{{showProp}}" model="{{value1}}" max="{{3}}" align="right" checkbox-icon="" active-color="orange" active-checkbox-icon="iconfont icon-duihao" active-checkbox-color="blue" bind:change="change">
       <vtu-checkbox-prop-item value="1" label="北京" icon="iconfont icon-biaoxing" ></vtu-checkbox-prop-item>
       <vtu-checkbox-prop-item value="2" label="上海" icon="iconfont icon-xihuan" ></vtu-checkbox-prop-item>
