--- a/examples/pages/comp/list/chat/list.wxml
+++ b/examples/pages/comp/list/chat/list.wxml
@@ -1,6 +1,6 @@
 <import src="/miniprogram_npm/vtuweapp/template/list/template"/>
 <view class="container">
-  <vtu-navbar title="聊天列表"></vtu-navbar>
+  <vtu-navbar title="好友列表"></vtu-navbar>
   <view class="center">
     <view class="comment-span">
       <template is="chatList_style1" data="{{src: 'https://activity.vtuzx.com/doc/vtuui/weapp/avatar/1.png'}}"></template>
