--- a/examples/pages/comp/tab/tab.wxml
+++ b/examples/pages/comp/tab/tab.wxml
@@ -4,10 +4,10 @@
     <vtu-panel v-class="panel" title="基础用法">
       <view  id="fixTab">
         <vtu-tabs value="{{value2}}" bind:change="change" fixed="{{tabFixed}}" bg-color="#fff" fixed-top="{{tabFixed?navBarHeight:0}}">
-          <vtu-tab label="标签一" name="name1" v-class="style-content" badge="hot"></vtu-tab>
-          <vtu-tab label="标签二" name="name2" v-class="style-content" badge="12"></vtu-tab>
-          <vtu-tab label="标签三" name="name3" v-class="style-content"></vtu-tab>
-          <vtu-tab label="标签四" name="name4" v-class="style-content"></vtu-tab>
+          <vtu-tab label="标签一" name="name1" v-class="style-content" badge="hot">1</vtu-tab>
+          <vtu-tab label="标签二" name="name2" v-class="style-content" badge="12">2</vtu-tab>
+          <vtu-tab label="标签三" name="name3" v-class="style-content">3</vtu-tab>
+          <vtu-tab label="标签四" name="name4" v-class="style-content">4</vtu-tab>
         </vtu-tabs>
       </view>
     </vtu-panel>
