--- a/examples/pages/comp/dialog/dialog.wxml
+++ b/examples/pages/comp/dialog/dialog.wxml
@@ -15,6 +15,7 @@
     <vtu-panel v-class="panel" title="自定义对话框">
       <vtu-btn bind:click="alert7" type="primary" v-class="dialog-btn">自定义对话框</vtu-btn>
       <vtu-btn bind:click="alert9" type="warning" v-class="dialog-btn">自定义高度</vtu-btn>
+      <vtu-btn bind:click="alert10" type="warning" v-class="dialog-btn">自定义高度2</vtu-btn>
     </vtu-panel>
     <vtu-dialog id="Vtu-Dialog"></vtu-dialog>
     <vtu-dialog id="Vtu-Custom-Dialog" show="{{show}}" title="自定义对话框内容" user-content-slot>
@@ -31,7 +32,15 @@
         <vtu-btn bind:click="closeCustomDialog" inlineBlock v-class="dialog-custom-btn">取消</vtu-btn>
       </view>
     </vtu-dialog>
-    <vtu-dialog id="Vtu-Custom-Dialog2" lockScroll="true" show="{{show2}}" contentHeight="60vh" title="自定义高度" user-content-slot  user-footer-slot>
+    <vtu-dialog id="Vtu-Custom-Dialog2" lockScroll="{{true}}" show="{{show2}}" contentHeight="60vh" title="自定义高度" user-content-slot  user-footer-slot>
+      <view class="Vtu-Custom-Center">
+        <text>1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n</text>
+      </view>
+      <view slot="footer" class="Vtu-Custom-Footer">
+        <vtu-btn type="primary" inlineBlock width="200px" v-class="dialog-custom-btn">确定</vtu-btn>
+      </view>
+    </vtu-dialog>
+    <vtu-dialog id="Vtu-Custom-Dialog2" lockScroll="{{true}}" show="{{show3}}" contentHeight="60vh" title="自定义高度" user-content-slot  user-footer-slot>
       <view class="Vtu-Custom-Center">
         <text>1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n1\n</text>
       </view>
